--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -3,8 +3,9 @@ ul{
     padding: 0;
 }
 .footer {
-    padding: 10px;
+    padding: 5px;
     text-align: center;
+    font-weight: 600;
     position: fixed;
     bottom: 0;
     right: 0;
