--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,10 +1,7 @@
 <div class="footer">
     <ul>
         <li>
-          <a href="">Become a Seller</a>
-        </li>
-        <li>
-          <a href="">Polices</a>
+          <a href="">Policies</a>
         </li>
         <li>
           <a href="">Terms and Conditions</a>
@@ -19,16 +16,9 @@
             <a href="">Facebook</a>
         </li>
         <li>
-            <a href="">Youtube</a>
-        </li>
-        <li>
-            <a href="">Sitemap</a>
-        </li>
-        <li>
             <a href="">FAQ</a>
         </li>
       </ul>
-      <p>© 2023 E-comme Project</p>
-      
+      <p>© 2023 E-commerce Project</p>      
 </div>
 
