--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,26 +11,55 @@
         </div>
     </ng-template>
 </ngb-carousel>
-<div class="product-list-wrapper">
+<div class="container mt-5 mb-5">
     <h1>Trendy Products</h1>
-    <div class="row">
-        <div class="col-sm-3" *ngFor="let item of trendyProducts">
-            <div class="product-item">
-                <img src="{{item.image}}" alt="">
-                <div class="product-details">
-                    <h6 class="name-head">{{item.name}}</h6>
-                    <div class="product-price">
-                        <h6>Price:{{item.price}}</h6>
+    <div class="d-flex justify-content-center row">
+        <div class="col-md-10" *ngFor="let item of trendyProducts">
+            <div class="row p-2 bg-white border rounded">
+                <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image"
+                        src="{{item.image}}"></div>
+                <!-- <div class="product-item"> -->
+                <!-- <img src="{{item.image}}" alt=""> -->
+                <div class="col-md-6 mt-1">
+                    <h5>{{item.name}}</h5>
+                    <!-- <div class="d-flex flex-row">
+                        <div class="ratings mr-2"><i class="fa fa-star"></i><i class="fa fa-star"></i><i
+                                class="fa fa-star"></i><i class="fa fa-star"></i></div><span>310</span>
+                    </div> -->
+                    <div class="mt-1 mb-1 spec-1"><span>{{item.category}}</span></div>
+                    <!-- <div class="product-details">
+                    <h6 class="name-head">{{item.name}}</h6> -->
+                    <p class="text-justify text-truncate para mb-0">{{item.description}}<br><br></p>
+                </div>
+                <!-- <div class="align-items-center align-content-center col-md-3 border-left mt-1">
+                    <div class="d-flex flex-row align-items-center">
+                        <h4 class="mr-1">₹{{item.price}}</h4>
                     </div>
-                    <div class="product-color">
+                    <h6 class="text-success">Free shipping</h6>
+                    <div class="d-flex flex-column mt-4"><a
+                                routerLink="/details/{{item.id}}">View Details</a>
+                    </div>
+                </div> -->
+                <div class="align-items-center align-content-center col-md-3 mt-1">
+                    <div class="d-flex flex-row align-items-center">
+                        <h4 class="mr-1">₹{{item.price}}</h4>
+                    </div>
+                    <h6 class="text-success">Free shipping</h6>
+                    <div class="d-flex flex-column mt-4"><button class="btn btn-primary btn-sm" type="button"
+                            (click)="viewDetails(item.id)">View Details</button>
+                    </div>
+                </div>
+                <!-- <h6>Price: ₹{{item.price}}</h6> -->
+                <!-- <h6>Color: {{item.color}}</h6> -->
+
+                <!-- <div class="product-color">
                         <h6>Color: {{item.color}}</h6>
-                    </div>
-                </div>
-                <div class="product-footer">
-                    <a routerLink="/details/{{item.id}}">View Details</a>
-                    <a href="">Add to Cart</a>
-                </div>
+                    </div> -->
             </div>
+            <!-- <div class="product-footer">
+                <a routerLink="/details/{{item.id}}">View Details</a>
+                <a href="">Add to Cart</a>
+            </div> -->
         </div>
     </div>
 </div>
