--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -38,7 +38,7 @@
             <span>Color</span>
             <h5 [style.backgroundColor]="productData.color" class="product-color"></h5>
             <div class="product-price">               
-                <span>{{productData.price}}</span>
+                <span>₹{{productData.price}}</span>
                 <div class="quantity-group">
                     <button (click)="handelQuantity('min')">-</button>
                     <input type="text" value="{{productQuantity}}" />
