--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -64,10 +64,10 @@ body {
     background: #eee
 }
 
-/* .ratings i {
+.ratings i {
     font-size: 16px;
     color: red
-} */
+}
 
 .strike-text {
     color: red;
@@ -78,7 +78,7 @@ body {
     width: 100%;
 }
 
-.dot {
+/* .dot {
     height: 7px;
     width: 7px;
     margin-left: 6px;
@@ -87,7 +87,7 @@ body {
     background-color: blue;
     border-radius: 50%;
     display: inline-block
-}
+} */
 
 .spec-1 {
     color: #938787;
