--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
-<div class="container">
+<div class="header">
   <app-header></app-header>
+</div>
+<div class="main-component">
   <router-outlet></router-outlet>
+</div>
+<div class="footer">
   <app-footer></app-footer>
 </div>
 
