--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -4,13 +4,15 @@ ul{
 }
 .footer {
     padding: 5px;
+    padding-bottom: 0px;
     text-align: center;
-    font-weight: 600;
+    font-weight: 300;
     position: fixed;
+    margin-bottom: 1px;
     bottom: 0;
     right: 0;
     left: 0;
-    background-color: #fff;
+    background-color: #282d32;
 }
 .footer ul{
     list-style-type: none;
@@ -18,6 +20,10 @@ ul{
     justify-content: space-between;
 }
 .footer ul li a{
-    color: blueviolet;
+    color: #f0f9ff;
     text-decoration: none;
+}
+.footer p{
+    color: #1bda0d;
+    padding-bottom: 0%;
 }
