--- a/src/app/seller-auth/seller-auth.component.html
+++ b/src/app/seller-auth/seller-auth.component.html
@@ -11,8 +11,8 @@
     </div>
 
 
-    <!-- Login area -->
-    <div *ngIf="showLogin" class="login">
+<!-- Login area -->
+<div *ngIf="showLogin" class="login">
         <h1>Seller Log-In</h1>
         <p class="error-p">{{authError}}</p>
         <form #sellerLogIn="ngForm" (ngSubmit)="logIn(sellerLogIn.value)" class="common-form">
@@ -23,3 +23,35 @@
         </form>
     </div>
 </div>
+<!-- <!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Untitled</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+</head> -->
+
+<!-- <body>
+    <div class="login-dark">
+        <div *ngIf="!showLogin" class="signup">
+            <form #sellerSignUp="ngForm" (ngSubmit)="signUp(sellerSignUp.value)">
+                <h2 class="sr-only">Login Form</h2>
+                <div class="illustration"><i class="icon ion-ios-locked-outline"></i></div>
+                <div class="form-group"><input class="form-control" type="text" ngModel name="name"
+                        placeholder="Enter Name" /></div>
+                <div class="form-group"><input class="form-control" type="password" ngModel name="password"
+                        placeholder="Enter Password" /></div>
+                <div class="form-group"><input class="form-control" type="text" ngModel name="email"
+                        placeholder="Enter Email"></div>
+                <div class="form-group"><button class="btn btn-primary btn-block">Sign-Up</button></div>
+                <a class="auth-toggle-link" (click)="openLogin()">Already have an account? Click Here</a>
+            </form>
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+</body> -->
