--- a/src/app/seller-home/seller-home.component.html
+++ b/src/app/seller-home/seller-home.component.html
@@ -1,4 +1,4 @@
-<div class="product-list">
+<!-- <div class="product-list">
     <h1>All Product List</h1>
     <p class="message-p">{{deleteMessage}} </p>
     <table>
@@ -26,7 +26,49 @@
                     <fa-icon (click)="deleteProduct(item.id)" [icon]="delicon" style="color:rgb(171, 35, 11)"></fa-icon>
                     <a class="edit-button"routerLink="/seller-update-product/{{item.id}}"><fa-icon [icon]="editicon"
                             style="color:rgb(171, 35, 11)"></fa-icon></a>
+                            </td>
             </tr>
         </tbody>
     </table>
-</div>
+</div> -->
+<section>
+    <!--for demo wrap-->
+    <h1>All Product List</h1>
+    <p class="message-p">{{deleteMessage}} </p>
+    <div class="tbl-header">
+        <table cellpadding="0" cellspacing="0" border="0">
+            <thead>
+                <tr>
+                    <th>Image</th>
+                    <th>Name</th>
+                    <th>Price</th>
+                    <th>Color</th>
+                    <th>Category</th>
+                    <th>Description</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+        </table>
+    </div>
+    <div class="tbl-content">
+        <table cellpadding="0" cellspacing="0" border="0">
+            <tbody>
+                <tr *ngFor="let item of productList">
+                    <td><img src="{{item.image}}"></td>
+                    <td>{{item.name}}</td>
+                    <td>{{item.price}}</td>
+                    <td>{{item.color}}</td>
+                    <td>{{item.category}}</td>
+                    <td>{{item.description}}</td>
+
+                    <td>
+                        <fa-icon (click)="deleteProduct(item.id)" [icon]="delicon"
+                            style="color:rgb(171, 35, 11)" class="del-button"></fa-icon>
+                        <a class="edit-button" routerLink="/seller-update-product/{{item.id}}"><fa-icon
+                                [icon]="editicon" style="color:rgb(171, 35, 11)"></fa-icon></a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</section>
