--- a/src/app/seller-auth/seller-auth.component.css
+++ b/src/app/seller-auth/seller-auth.component.css
@@ -1,13 +1,18 @@
 .seller-auth {
-    margin-bottom: 100px;
-    margin-left: 80px;
+   height: 100%;
+   padding-top: 20px;
+   padding-bottom: 125px;
+   /* width: 50%; */
+   /* border-radius: 4px; */
+    background-color: rgb(41, 133, 102);
 }
 
 .seller-auth h1{
-    margin-top: 100px;
-    padding: 25px;
-    
-    color: blueviolet;  
+    /* margin-top: 10px; */
+    padding: 4px;
+    color: #fff;  
+    font-family:sans-serif;
+    font-weight: 600;
     text-align: center; 
 }
 
@@ -20,8 +25,14 @@
 
 .auth-toggle-link{
     margin-top: 20px;
-    color: blueviolet;
+    color: #fff;
     font-size: 14px;
     text-align: center;
     cursor: pointer;
+}
+.form-input{
+    border-radius: 3px;
+}
+.form-button{
+    border-radius: 3px;
 }
