--- a/src/app/user-auth/user-auth.component.css
+++ b/src/app/user-auth/user-auth.component.css
@@ -1,23 +1,33 @@
 .user-auth h1{
-    margin-top: 100px;
-    /* margin-left: ; */
-    padding: 25px;
-    /* margin-bottom: 80px; */
-    color: blueviolet;  
-    text-align: center; 
+    padding: 10px;
+    color: #fff;  
+    font-family:sans-serif;
+    font-weight: 600;
+    text-align: center;
 }
 .user-auth {
-    margin-bottom: 100px;
-    margin-left: 80px;
+    height: 100%;
+    padding-top: 100px;
+    padding-bottom: 150px;
+   /* width: 50%; */
+   /* border-radius: 4px; */
+   background: -webkit-linear-gradient(left, #18a66b, rgb(41, 133, 102));
+   background: linear-gradient(to right, #3ea87c,  rgb(41, 133, 102));
 }
 .common-form a{
-    color: blueviolet;
+    color: blue;
     cursor: pointer;
 }
 .auth-toggle-link{
     margin-top: 20px;
-    color: blueviolet;
+    color: #fff;
     font-size: 14px;
     text-align: center;
     cursor: pointer;
+}
+.form-input{
+    border-radius: 3px;
+}
+.form-button{
+    border-radius: 3px;
 }
